--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,54 @@
+html {
+  height: 100%;
+  overflow: auto;
+}
+body {
+  height: 100%;
+}
+
 .App {
   text-align: center;
+  font-size: 16px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/* Form */
+.form {
+  margin: 10vh auto;
+  width: 300px;
   display: flex;
   flex-direction: column;
-  align-items: center;
+}
+textarea {
+  height: 100px !important;
+  width: 100%;
+  margin-bottom: 10px !important;
+}
+p {
+  text-align: left;
+}
+button {
+  align-self: flex-end;
+}
+
+/* Display */
+.display {
+  height: 100vh;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: column;
+  background-color: #000;
+  font-size: 40px;
+}
+.display__content {
+  padding-bottom: 30vh;
+}
+.display__content__day {
+  color: orangered;
+  margin-bottom: 6vh;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.display__content__text {
+  color: yellow;
+  white-space: pre-wrap;
+  line-height: 1em;
 }
