--- a/src/App.css
+++ b/src/App.css
@@ -26,8 +26,12 @@ textarea {
 p {
   text-align: left;
 }
-button {
-  align-self: flex-end;
+.form__buttons {
+  display: flex;
+  justify-content: flex-end;
+}
+.form__buttons button:nth-child(1) {
+  margin-right: 5px;
 }
 
 /* Display */
